feat: add entity

--- a/src/Services/Masa.Dcc.Service/Masa.Dcc.Service.Admin.csproj
+++ b/src/Services/Masa.Dcc.Service/Masa.Dcc.Service.Admin.csproj
@@ -5,24 +5,32 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <Compile Remove="Domain\Aggregates\Secret\**" />
+	  <Content Remove="Domain\Aggregates\Secret\**" />
+	  <EmbeddedResource Remove="Domain\Aggregates\Secret\**" />
+	  <None Remove="Domain\Aggregates\Secret\**" />
+	</ItemGroup>
 	
 	<ItemGroup>
-		<PackageReference Include="Masa.BuildingBlocks.Dispatcher.Events" Version="0.3.0" />
-		<PackageReference Include="Masa.Contrib.Dispatcher.Events" Version="0.3.0" />
-		<PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.EventLogs.EF" Version="0.3.0" />
-		<PackageReference Include="FluentValidation" Version="10.3.6" />
-		<PackageReference Include="FluentValidation.AspNetCore" Version="10.3.6" />
+		<PackageReference Include="Masa.BuildingBlocks.Dispatcher.Events" Version="0.4.0-preview.4" />
+		<PackageReference Include="Masa.Contrib.Dispatcher.Events" Version="0.4.0-preview.4" />
+		<PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.EventLogs.EF" Version="0.4.0-preview.4" />
+		<PackageReference Include="FluentValidation" Version="10.4.0" />
+		<PackageReference Include="FluentValidation.AspNetCore" Version="10.4.0" />
 		<PackageReference Include="Dapr.AspNetCore" Version="1.5.0" />
-		<PackageReference Include="Masa.BuildingBlocks.Ddd.Domain" Version="0.3.0" />
-		<PackageReference Include="Masa.Contrib.Ddd.Domain" Version="0.3.0" />
-		<PackageReference Include="Masa.Contrib.Ddd.Domain.Repository.EF" Version="0.3.0" />
-		<PackageReference Include="Masa.Contrib.ReadWriteSpliting.Cqrs" Version="0.3.0" />
-		<PackageReference Include="Masa.Contrib.Service.MinimalAPIs" Version="0.3.0" />
+		<PackageReference Include="Masa.BuildingBlocks.Ddd.Domain" Version="0.4.0-preview.4" />
+		<PackageReference Include="Masa.Contrib.Ddd.Domain" Version="0.4.0-preview.4" />
+		<PackageReference Include="Masa.Contrib.Ddd.Domain.Repository.EF" Version="0.4.0-preview.4" />
+		<PackageReference Include="Masa.Contrib.ReadWriteSpliting.Cqrs" Version="0.4.0-preview.4" />
+		<PackageReference Include="Masa.Contrib.Service.MinimalAPIs" Version="0.4.0-preview.4" />
 		<PackageReference Include="Masa.Utils.Caller.HttpClient" Version="0.4.0-preview.4" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.1" />
-		<PackageReference Include="Masa.Contrib.Data.UoW.EF" Version="0.3.0" />
-		<PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.Dapr" Version="0.3.0" />
+		<PackageReference Include="Masa.Contrib.Data.UoW.EF" Version="0.4.0-preview.4" />
+		<PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.Dapr" Version="0.4.0-preview.4" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.1" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.4" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
 	</ItemGroup>
 	
@@ -36,6 +44,10 @@
 	</ItemGroup>
 	
 	<ItemGroup>
-	  <Folder Include="Domain\Aggregates\Secret\" />
+	  <Folder Include="Infrastructure\EntityConfigurations\" />
+	</ItemGroup>
+	
+	<ItemGroup>
+	  <ProjectReference Include="..\..\Contracts\Masa.Dcc.Contracts.Admin\Masa.Dcc.Contracts.Admin.csproj" />
 	</ItemGroup>
 </Project>
