feat(publicConfig): add public config

--- a/src/Services/Masa.Dcc.Service/Masa.Dcc.Service.Admin.csproj
+++ b/src/Services/Masa.Dcc.Service/Masa.Dcc.Service.Admin.csproj
@@ -7,10 +7,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <Compile Remove="Domain\Aggregates\Secret\**" />
-	  <Content Remove="Domain\Aggregates\Secret\**" />
-	  <EmbeddedResource Remove="Domain\Aggregates\Secret\**" />
-	  <None Remove="Domain\Aggregates\Secret\**" />
+	  <Compile Remove="Domain\App\Aggregates\Secret\**" />
+	  <Content Remove="Domain\App\Aggregates\Secret\**" />
+	  <EmbeddedResource Remove="Domain\App\Aggregates\Secret\**" />
+	  <None Remove="Domain\App\Aggregates\Secret\**" />
 	</ItemGroup>
 	
 	<ItemGroup>
@@ -26,11 +26,16 @@
 		<PackageReference Include="Masa.Contrib.ReadWriteSpliting.Cqrs" Version="0.4.0-preview.4" />
 		<PackageReference Include="Masa.Contrib.Service.MinimalAPIs" Version="0.4.0-preview.4" />
 		<PackageReference Include="Masa.Utils.Caller.HttpClient" Version="0.4.0-preview.4" />
+		<PackageReference Include="Masa.Utils.Data.EntityFrameworkCore.SqlServer" Version="0.4.0-preview.4" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.1" />
 		<PackageReference Include="Masa.Contrib.Data.UoW.EF" Version="0.4.0-preview.4" />
 		<PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.Dapr" Version="0.4.0-preview.4" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.4" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.4">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
 	</ItemGroup>
 	
@@ -44,7 +49,9 @@
 	</ItemGroup>
 	
 	<ItemGroup>
-	  <Folder Include="Infrastructure\EntityConfigurations\" />
+	  <Folder Include="Application\Label\" />
+	  <Folder Include="Domain\Label\Repositories\" />
+	  <Folder Include="Migrations\" />
 	</ItemGroup>
 	
 	<ItemGroup>
