--- a/src/Contracts/Masa.Dcc.Contracts.Admin/Masa.Dcc.Contracts.Admin.csproj
+++ b/src/Contracts/Masa.Dcc.Contracts.Admin/Masa.Dcc.Contracts.Admin.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Label\Dtos\" />
+  </ItemGroup>
+
 </Project>
