feat(configObject): add config object

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Masa.Dcc.Web.Admin.Rcl.csproj
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Masa.Dcc.Web.Admin.Rcl.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\ApiGateways\Masa.Dcc.Caller\Masa.Dcc.Caller.csproj" />
+    <ProjectReference Include="..\..\..\ApiGateways\Masa.Dcc.ApiGateways.Caller\Masa.Dcc.ApiGateways.Caller.csproj" />
   </ItemGroup>
 
   <ItemGroup>
