feat: update config object

--- a/src/Services/Masa.Dcc.Service/appsettings.Development.json
+++ b/src/Services/Masa.Dcc.Service/appsettings.Development.json
@@ -8,5 +8,15 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=10.10.90.37,30110;Database=masa-dcc-v2;User Id=sa;Password=p@ssw0rd;"
+  },
+  "Redis": {
+    "Servers": [
+      {
+        "Host": "10.10.90.37",
+        "Port": 30120
+      }
+    ],
+    "DefaultDatabase": 0,
+    "Password": "p@ssw0rd"
   }
 }
