--- a/src/Services/Masa.Dcc.Service/Masa.Dcc.Service.Admin.csproj
+++ b/src/Services/Masa.Dcc.Service/Masa.Dcc.Service.Admin.csproj
@@ -27,6 +27,7 @@
 		<PackageReference Include="Masa.Contrib.ReadWriteSpliting.Cqrs" Version="0.4.0-preview.4" />
 		<PackageReference Include="Masa.Contrib.Service.MinimalAPIs" Version="0.4.0-preview.4" />
 		<PackageReference Include="Masa.Utils.Caching.DistributedMemory" Version="0.4.0-preview.4" />
+		<PackageReference Include="Masa.Utils.Caching.Redis" Version="0.4.0-preview.4" />
 		<PackageReference Include="Masa.Utils.Caller.HttpClient" Version="0.4.0-preview.4" />
 		<PackageReference Include="Masa.Utils.Data.EntityFrameworkCore.SqlServer" Version="0.4.0-preview.4" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.1" />
