feat: add app pin

--- a/src/ApiGateways/Masa.Dcc.ApiGateways.Caller/Masa.Dcc.ApiGateways.Caller.csproj
+++ b/src/ApiGateways/Masa.Dcc.ApiGateways.Caller/Masa.Dcc.ApiGateways.Caller.csproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Contracts\Masa.Dcc.Contracts.Admin\Masa.Dcc.Contracts.Admin.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="Masa.BuildingBlocks.BasicAbility.Pm">
       <HintPath>..\..\..\..\..\MASA.Contrib\src\BasicAbility\Masa.Contrib.BasicAbility.Pm\bin\Debug\net6.0\Masa.BuildingBlocks.BasicAbility.Pm.dll</HintPath>
     </Reference>
