feat: add config page

--- a/src/Services/Masa.Dcc.Service/Masa.Dcc.Service.Admin.csproj
+++ b/src/Services/Masa.Dcc.Service/Masa.Dcc.Service.Admin.csproj
@@ -15,25 +15,25 @@
 	
 	<ItemGroup>
 		<PackageReference Include="Mapster" Version="7.3.0" />
-		<PackageReference Include="Masa.BuildingBlocks.Dispatcher.Events" Version="0.4.0-preview.5" />
-		<PackageReference Include="Masa.Contrib.Data.Contracts.EF" Version="0.4.0-preview.5" />
-		<PackageReference Include="Masa.Contrib.Data.EntityFrameworkCore.SqlServer" Version="0.4.0-preview.5" />
-		<PackageReference Include="Masa.Contrib.Dispatcher.Events" Version="0.4.0-preview.5" />
-		<PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.EventLogs.EF" Version="0.4.0-preview.5" />
+		<PackageReference Include="Masa.BuildingBlocks.Dispatcher.Events" Version="0.4.0-rc1" />
+		<PackageReference Include="Masa.Contrib.Data.Contracts.EF" Version="0.4.0-rc1" />
+		<PackageReference Include="Masa.Contrib.Data.EntityFrameworkCore.SqlServer" Version="0.4.0-rc1" />
+		<PackageReference Include="Masa.Contrib.Dispatcher.Events" Version="0.4.0-rc1" />
+		<PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.EventLogs.EF" Version="0.4.0-rc1" />
 		<PackageReference Include="FluentValidation" Version="10.4.0" />
 		<PackageReference Include="FluentValidation.AspNetCore" Version="10.4.0" />
 		<PackageReference Include="Dapr.AspNetCore" Version="1.5.0" />
-		<PackageReference Include="Masa.BuildingBlocks.Ddd.Domain" Version="0.4.0-preview.5" />
-		<PackageReference Include="Masa.Contrib.Ddd.Domain" Version="0.4.0-preview.5" />
-		<PackageReference Include="Masa.Contrib.Ddd.Domain.Repository.EF" Version="0.4.0-preview.5" />
-		<PackageReference Include="Masa.Contrib.ReadWriteSpliting.Cqrs" Version="0.4.0-preview.5" />
-		<PackageReference Include="Masa.Contrib.Service.MinimalAPIs" Version="0.4.0-preview.5" />
-		<PackageReference Include="Masa.Utils.Caching.DistributedMemory" Version="0.4.0-preview.5" />
-		<PackageReference Include="Masa.Utils.Caching.Redis" Version="0.4.0-preview.5" />
-		<PackageReference Include="Masa.Utils.Caller.HttpClient" Version="0.4.0-preview.5" />
+		<PackageReference Include="Masa.BuildingBlocks.Ddd.Domain" Version="0.4.0-rc1" />
+		<PackageReference Include="Masa.Contrib.Ddd.Domain" Version="0.4.0-rc1" />
+		<PackageReference Include="Masa.Contrib.Ddd.Domain.Repository.EF" Version="0.4.0-rc1" />
+		<PackageReference Include="Masa.Contrib.ReadWriteSpliting.Cqrs" Version="0.4.0-rc1" />
+		<PackageReference Include="Masa.Contrib.Service.MinimalAPIs" Version="0.4.0-rc1" />
+		<PackageReference Include="Masa.Utils.Caching.DistributedMemory" Version="0.4.0-rc1" />
+		<PackageReference Include="Masa.Utils.Caching.Redis" Version="0.4.0-rc1" />
+		<PackageReference Include="Masa.Utils.Caller.HttpClient" Version="0.4.0-rc1" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.1" />
-		<PackageReference Include="Masa.Contrib.Data.UoW.EF" Version="0.4.0-preview.5" />
-		<PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.Dapr" Version="0.4.0-preview.5" />
+		<PackageReference Include="Masa.Contrib.Data.UoW.EF" Version="0.4.0-rc1" />
+		<PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.Dapr" Version="0.4.0-rc1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.4" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.4">
@@ -53,7 +53,6 @@
 	</ItemGroup>
 	
 	<ItemGroup>
-	  <Folder Include="Application\Label\" />
 	  <Folder Include="Migrations\" />
 	</ItemGroup>
 	
