--- a/src/ApiGateways/Masa.Dcc.ApiGateways.Caller/Masa.Dcc.ApiGateways.Caller.csproj
+++ b/src/ApiGateways/Masa.Dcc.ApiGateways.Caller/Masa.Dcc.ApiGateways.Caller.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Masa.Utils.Caller.HttpClient" Version="0.4.0-preview.5" />
-    <PackageReference Include="Masa.Utils.Configuration.Json" Version="0.4.0-preview.5" />
+    <PackageReference Include="Masa.Utils.Caller.HttpClient" Version="0.4.0-rc1" />
+    <PackageReference Include="Masa.Utils.Configuration.Json" Version="0.4.0-rc1" />
   </ItemGroup>
 
   <ItemGroup>
