--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Masa.Dcc.Web.Admin.Rcl.csproj
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Masa.Dcc.Web.Admin.Rcl.csproj
@@ -11,8 +11,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Masa.Blazor" Version="0.2.11701" />
+    <PackageReference Include="Mapster" Version="7.3.0" />
+    <PackageReference Include="Masa.Blazor" Version="0.4.0-preview.4" />
+    <PackageReference Include="Masa.Stack.Components" Version="0.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
