--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.Staging.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.Staging.json
@@ -6,5 +6,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ServiceBaseUrl": "https://dcc-service-develop.masastack.com"
+  "ServiceBaseUrl": "https://dcc-service-staging.masastack.com"
 }
