--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,7 @@ deploy-dev:
     - echo $KUBE_CONFIG_DEV | base64 -d > ./config
     - echo $CI_PIPELINE_ID     
     - kubectl --kubeconfig ./config set image deployment/masa-dcc-service-admin masa-dcc-service-admin=$NEW_IMAGE_DCC_DEV -n $NAMESPACE_DEV
-    - kubectl --kubeconfig ./config set image deployment/masa-dcc-service-admin masa-dcc-service-admin=$NEW_IMAGE_DCC_UI_DEV -n $NAMESPACE_DEV
+    - kubectl --kubeconfig ./config set image deployment/masa-dcc-web-admin-server masa-dcc-web-admin-server=$NEW_IMAGE_DCC_UI_DEV -n $NAMESPACE_DEV
   retry: 2
 
 deploy-test:
