--- a/src/Services/Masa.Dcc.Service/appsettings.Development.json
+++ b/src/Services/Masa.Dcc.Service/appsettings.Development.json
@@ -18,5 +18,6 @@
     ],
     "DefaultDatabase": 0,
     "Password": "p@ssw0rd"
-  }
+  },
+  "PmClientAddress": "https://pm-service-dev.masastack.com/"
 }
