--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.Develop.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.Develop.json
@@ -6,5 +6,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ServiceBaseUrl": "https://dcc-service-develop.masastack.com"
+  "ServiceBaseUrl": "https://dcc-service-develop.masastack.com",
+  "PmClientAddress": "https://pm-service-dev.masastack.com/"
 }
