--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.Development.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.Development.json
@@ -6,5 +6,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ServiceBaseUrl": "http://localhost:6196"
+  "ServiceBaseUrl": "http://localhost:6196",
+  "PmClientAddress": "https://pm-service-dev.masastack.com/"
 }
