--- a/src/Services/Masa.Dcc.Service/Masa.Dcc.Service.Admin.csproj
+++ b/src/Services/Masa.Dcc.Service/Masa.Dcc.Service.Admin.csproj
@@ -35,6 +35,7 @@
 		<PackageReference Include="Masa.Utils.Caching.DistributedMemory" Version="0.4.0-rc1" />
 		<PackageReference Include="Masa.Utils.Caching.Redis" Version="0.4.0-rc1" />
 		<PackageReference Include="Masa.Utils.Caller.HttpClient" Version="0.4.0-rc1" />
+		<PackageReference Include="Masa.Utils.Extensions.Expressions" Version="0.5.0-preview.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.1" />
 		<PackageReference Include="Masa.Contrib.Data.UoW.EF" Version="0.4.0-rc1" />
 		<PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.Dapr" Version="0.4.0-rc1" />
