chore: update masa packages and access auth and new layout

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.Development.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.Development.json
@@ -7,5 +7,12 @@
     }
   },
   "ServiceBaseUrl": "http://localhost:6196",
-  "PmClientAddress": "https://pm-service-dev.masastack.com/"
+  "PmClientAddress": "https://pm-service-dev.masastack.com/",
+  "AuthServiceBaseAddress": "https://auth-service-develop.masastack.com/",
+  "McServiceBaseAddress": "https://mc-service-develop.masastack.com",
+  "OIDC": {
+    "Authority": "https://sso-develop.masastack.com",
+    "ClientId": "masa.stack.web-develop",
+    "ClientSecret": ""
+  }
 }
