--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.Develop.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.Develop.json
@@ -7,5 +7,12 @@
     }
   },
   "ServiceBaseUrl": "https://dcc-service-develop.masastack.com",
-  "PmClientAddress": "https://pm-service-dev.masastack.com/"
+  "PmClientAddress": "https://pm-service-dev.masastack.com/",
+  "AuthServiceBaseAddress": "https://auth-service-develop.masastack.com/",
+  "McServiceBaseAddress": "https://mc-service-develop.masastack.com",
+  "OIDC": {
+    "Authority": "https://sso-develop.masastack.com",
+    "ClientId": "masa.stack.web-development",
+    "ClientSecret": ""
+  }
 }
