--- a/src/ApiGateways/Masa.Dcc.ApiGateways.Caller/Masa.Dcc.ApiGateways.Caller.csproj
+++ b/src/ApiGateways/Masa.Dcc.ApiGateways.Caller/Masa.Dcc.ApiGateways.Caller.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Masa.Contrib.BasicAbility.Pm" Version="0.4.0-rc1" />
-    <PackageReference Include="Masa.Utils.Caller.HttpClient" Version="0.4.0-rc1" />
-    <PackageReference Include="Masa.Utils.Configuration.Json" Version="0.4.0-rc1" />
+    <PackageReference Include="Masa.Contrib.BasicAbility.Pm" Version="0.5.0-preview.7" />
+    <PackageReference Include="Masa.Utils.Caller.HttpClient" Version="0.5.0-preview.6" />
+    <PackageReference Include="Masa.Utils.Configuration.Json" Version="0.5.0-preview.6" />
   </ItemGroup>
 
   <ItemGroup>
