--- a/src/Services/Masa.Dcc.Service/Masa.Dcc.Service.Admin.csproj
+++ b/src/Services/Masa.Dcc.Service/Masa.Dcc.Service.Admin.csproj
@@ -18,27 +18,27 @@
 	
 	<ItemGroup>
 		<PackageReference Include="Mapster" Version="7.3.0" />
-		<PackageReference Include="Masa.BuildingBlocks.Dispatcher.Events" Version="0.4.0-rc1" />
-		<PackageReference Include="Masa.Contrib.BasicAbility.Pm" Version="0.4.0-rc1" />
-		<PackageReference Include="Masa.Contrib.Data.Contracts.EF" Version="0.4.0-rc1" />
-		<PackageReference Include="Masa.Contrib.Data.EntityFrameworkCore.SqlServer" Version="0.4.0-rc1" />
-		<PackageReference Include="Masa.Contrib.Dispatcher.Events" Version="0.4.0-rc1" />
-		<PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.EventLogs.EF" Version="0.4.0-rc1" />
+		<PackageReference Include="Masa.BuildingBlocks.Dispatcher.Events" Version="0.5.0-preview.7" />
+		<PackageReference Include="Masa.Contrib.BasicAbility.Pm" Version="0.5.0-preview.7" />
+		<PackageReference Include="Masa.Contrib.Data.Contracts.EF" Version="0.5.0-preview.7" />
+		<PackageReference Include="Masa.Contrib.Data.EntityFrameworkCore.SqlServer" Version="0.5.0-preview.7" />
+		<PackageReference Include="Masa.Contrib.Dispatcher.Events" Version="0.5.0-preview.7" />
+		<PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.EventLogs.EF" Version="0.5.0-preview.7" />
 		<PackageReference Include="FluentValidation" Version="10.4.0" />
 		<PackageReference Include="FluentValidation.AspNetCore" Version="10.4.0" />
 		<PackageReference Include="Dapr.AspNetCore" Version="1.5.0" />
-		<PackageReference Include="Masa.BuildingBlocks.Ddd.Domain" Version="0.4.0-rc1" />
-		<PackageReference Include="Masa.Contrib.Ddd.Domain" Version="0.4.0-rc1" />
-		<PackageReference Include="Masa.Contrib.Ddd.Domain.Repository.EF" Version="0.4.0-rc1" />
-		<PackageReference Include="Masa.Contrib.ReadWriteSpliting.Cqrs" Version="0.4.0-rc1" />
-		<PackageReference Include="Masa.Contrib.Service.MinimalAPIs" Version="0.4.0-rc1" />
-		<PackageReference Include="Masa.Utils.Caching.DistributedMemory" Version="0.4.0-rc1" />
-		<PackageReference Include="Masa.Utils.Caching.Redis" Version="0.4.0-rc1" />
-		<PackageReference Include="Masa.Utils.Caller.HttpClient" Version="0.4.0-rc1" />
-		<PackageReference Include="Masa.Utils.Extensions.Expressions" Version="0.5.0-preview.1" />
+		<PackageReference Include="Masa.BuildingBlocks.Ddd.Domain" Version="0.5.0-preview.7" />
+		<PackageReference Include="Masa.Contrib.Ddd.Domain" Version="0.5.0-preview.7" />
+		<PackageReference Include="Masa.Contrib.Ddd.Domain.Repository.EF" Version="0.5.0-preview.7" />
+		<PackageReference Include="Masa.Contrib.ReadWriteSpliting.Cqrs" Version="0.5.0-preview.7" />
+		<PackageReference Include="Masa.Contrib.Service.MinimalAPIs" Version="0.5.0-preview.7" />
+		<PackageReference Include="Masa.Utils.Caching.DistributedMemory" Version="0.5.0-preview.6" />
+		<PackageReference Include="Masa.Utils.Caching.Redis" Version="0.5.0-preview.6" />
+		<PackageReference Include="Masa.Utils.Caller.HttpClient" Version="0.5.0-preview.6" />
+		<PackageReference Include="Masa.Utils.Extensions.Expressions" Version="0.5.0-preview.6" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.1" />
-		<PackageReference Include="Masa.Contrib.Data.UoW.EF" Version="0.4.0-rc1" />
-		<PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.Dapr" Version="0.4.0-rc1" />
+		<PackageReference Include="Masa.Contrib.Data.UoW.EF" Version="0.5.0-preview.7" />
+		<PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.Dapr" Version="0.5.0-preview.7" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.4" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.4">
@@ -47,10 +47,6 @@
 		</PackageReference>
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-	</ItemGroup>
-	
-	<ItemGroup>
-	  <Folder Include="Migrations\" />
 	</ItemGroup>
 	
 	<ItemGroup>
