--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Masa.Dcc.Web.Admin.Rcl.csproj
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Masa.Dcc.Web.Admin.Rcl.csproj
@@ -12,8 +12,9 @@
 
   <ItemGroup>
     <PackageReference Include="Mapster" Version="7.3.0" />
-    <PackageReference Include="Masa.Blazor" Version="0.5.0-preview.2" />
-    <PackageReference Include="Masa.Stack.Components" Version="0.0.20" />
+    <PackageReference Include="Masa.Blazor" Version="0.5.0-rc.5" />
+    <PackageReference Include="Masa.Stack.Components" Version="0.0.54" />
+    <PackageReference Include="Masa.Utils.Security.Authentication.OpenIdConnect" Version="0.5.0-preview.6" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.3" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
@@ -29,7 +30,7 @@
     <Content Update="wwwroot\i18n\en-US.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Update="wwwroot\i18n\languageConfig.json">
+    <Content Update="wwwroot\i18n\supportedCultures.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Update="wwwroot\i18n\zh-CN.json">
