--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Masa.Dcc.Web.Admin.Rcl.csproj
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Masa.Dcc.Web.Admin.Rcl.csproj
@@ -13,7 +13,8 @@
   <ItemGroup>
     <PackageReference Include="Mapster" Version="7.3.0" />
     <PackageReference Include="Masa.Blazor" Version="0.5.0-rc.6" />
-    <PackageReference Include="Masa.Stack.Components" Version="0.0.63" />
+    <PackageReference Include="Masa.Contrib.BasicAbility.Tsc" Version="0.5.0" />
+    <PackageReference Include="Masa.Stack.Components" Version="0.0.71" />
     <PackageReference Include="Masa.Utils.Security.Authentication.OpenIdConnect" Version="0.5.0-rc.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.3" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
