fix: update style

--- a/src/Services/Masa.Dcc.Service/appsettings.Develop.json
+++ b/src/Services/Masa.Dcc.Service/appsettings.Develop.json
@@ -19,5 +19,5 @@
     "DefaultDatabase": 0,
     "Password": "p@ssw0rd"
   },
-  "PmClientAddress": "https://pm-service-dev.masastack.com/"
+  "PmClientAddress": "https://pm-service-develop.masastack.com/"
 }
