--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.Develop.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.Develop.json
@@ -7,7 +7,7 @@
     }
   },
   "ServiceBaseUrl": "https://dcc-service-develop.masastack.com",
-  "PmClientAddress": "https://pm-service-dev.masastack.com/",
+  "PmClientAddress": "https://pm-service-develop.masastack.com/",
   "AuthServiceBaseAddress": "https://auth-service-develop.masastack.com/",
   "McServiceBaseAddress": "https://mc-service-develop.masastack.com",
   "OIDC": {
