chore: update package

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.Staging.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.Staging.json
@@ -12,7 +12,7 @@
   "McServiceBaseAddress": "https://mc-service-staging.masastack.com",
   "OIDC": {
     "Authority": "https://sso-staging.masastack.com",
-    "ClientId": "masa.stack.web-development",
+    "ClientId": "masa.stack.web-staging",
     "ClientSecret": ""
   }
 }
