--- a/src/ApiGateways/Masa.Dcc.ApiGateways.Caller/Masa.Dcc.ApiGateways.Caller.csproj
+++ b/src/ApiGateways/Masa.Dcc.ApiGateways.Caller/Masa.Dcc.ApiGateways.Caller.csproj
@@ -8,8 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Masa.Contrib.BasicAbility.Pm" Version="0.6.0-preview.1" />
-    <PackageReference Include="Masa.Utils.Caller.HttpClient" Version="0.5.0" />
-    <PackageReference Include="Masa.Utils.Configuration.Json" Version="0.5.0" />
+    <PackageReference Include="Masa.Utils.Caller.HttpClient" Version="0.6.0-preview.2" />
+    <PackageReference Include="Masa.Utils.Configuration.Json" Version="0.6.0-preview.3" />
   </ItemGroup>
 
   <ItemGroup>
