--- a/src/Services/Masa.Dcc.Service/Masa.Dcc.Service.Admin.csproj
+++ b/src/Services/Masa.Dcc.Service/Masa.Dcc.Service.Admin.csproj
@@ -18,27 +18,27 @@
 	
 	<ItemGroup>
 		<PackageReference Include="Mapster" Version="7.3.0" />
-		<PackageReference Include="Masa.BuildingBlocks.Dispatcher.Events" Version="0.6.0-preview.1" />
-		<PackageReference Include="Masa.Contrib.BasicAbility.Pm" Version="0.6.0-preview.1" />
-		<PackageReference Include="Masa.Contrib.Data.Contracts.EF" Version="0.6.0-preview.1" />
-		<PackageReference Include="Masa.Contrib.Data.EntityFrameworkCore.SqlServer" Version="0.6.0-preview.1" />
-		<PackageReference Include="Masa.Contrib.Dispatcher.Events" Version="0.6.0-preview.1" />
-		<PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.EventLogs.EF" Version="0.6.0-preview.1" />
+		<PackageReference Include="Masa.BuildingBlocks.Dispatcher.Events" Version="0.6.0-preview.3" />
+		<PackageReference Include="Masa.Contrib.StackSdks.Pm" Version="0.6.0-preview.3" />
+		<PackageReference Include="Masa.Contrib.Data.Contracts.EFCore" Version="0.6.0-preview.3" />
+		<PackageReference Include="Masa.Contrib.Data.EFCore.SqlServer" Version="0.6.0-preview.3" />
+		<PackageReference Include="Masa.Contrib.Dispatcher.Events" Version="0.6.0-preview.3" />
+		<PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.EventLogs.EFCore" Version="0.6.0-preview.3" />
 		<PackageReference Include="FluentValidation" Version="10.4.0" />
 		<PackageReference Include="FluentValidation.AspNetCore" Version="10.4.0" />
 		<PackageReference Include="Dapr.AspNetCore" Version="1.5.0" />
-		<PackageReference Include="Masa.BuildingBlocks.Ddd.Domain" Version="0.6.0-preview.1" />
-		<PackageReference Include="Masa.Contrib.Ddd.Domain" Version="0.6.0-preview.1" />
-		<PackageReference Include="Masa.Contrib.Ddd.Domain.Repository.EF" Version="0.6.0-preview.1" />
-		<PackageReference Include="Masa.Contrib.ReadWriteSpliting.Cqrs" Version="0.6.0-preview.1" />
-		<PackageReference Include="Masa.Contrib.Service.MinimalAPIs" Version="0.6.0-preview.1" />
-		<PackageReference Include="Masa.Utils.Caching.DistributedMemory" Version="0.5.0" />
-		<PackageReference Include="Masa.Utils.Caching.Redis" Version="0.5.0" />
-		<PackageReference Include="Masa.Utils.Caller.HttpClient" Version="0.5.0" />
-		<PackageReference Include="Masa.Utils.Extensions.Expressions" Version="0.5.0" />
+		<PackageReference Include="Masa.BuildingBlocks.Ddd.Domain" Version="0.6.0-preview.3" />
+		<PackageReference Include="Masa.Contrib.Ddd.Domain" Version="0.6.0-preview.3" />
+		<PackageReference Include="Masa.Contrib.Ddd.Domain.Repository.EFCore" Version="0.6.0-preview.3" />
+		<PackageReference Include="Masa.Contrib.ReadWriteSpliting.Cqrs" Version="0.6.0-preview.3" />
+		<PackageReference Include="Masa.Contrib.Service.MinimalAPIs" Version="0.6.0-preview.3" />
+		<PackageReference Include="Masa.Utils.Caching.DistributedMemory" Version="0.6.0-preview.3" />
+		<PackageReference Include="Masa.Utils.Caching.Redis" Version="0.6.0-preview.3" />
+		<PackageReference Include="Masa.Utils.Caller.HttpClient" Version="0.6.0-preview.2" />
+		<PackageReference Include="Masa.Utils.Extensions.Expressions" Version="0.6.0-preview.3" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.1" />
-		<PackageReference Include="Masa.Contrib.Data.UoW.EF" Version="0.6.0-preview.1" />
-		<PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.Dapr" Version="0.6.0-preview.1" />
+		<PackageReference Include="Masa.Contrib.Data.UoW.EFCore" Version="0.6.0-preview.3" />
+		<PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.Dapr" Version="0.6.0-preview.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.4" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.4">
