--- a/src/Services/Masa.Dcc.Service/appsettings.Staging.json
+++ b/src/Services/Masa.Dcc.Service/appsettings.Staging.json
@@ -19,5 +19,6 @@
     "DefaultDatabase": 0,
     "Password": "p@ssw0rd"
   },
-  "PmClientAddress": "https://pm-service-staging.masastack.com/"
+  "PmClientAddress": "https://pm-service-staging.masastack.com/",
+  "IdentityServerUrl": "https://sso-staging.masastack.com"
 }
