--- a/src/Services/Masa.Dcc.Service/appsettings.Development.json
+++ b/src/Services/Masa.Dcc.Service/appsettings.Development.json
@@ -19,5 +19,6 @@
     "DefaultDatabase": 0,
     "Password": "p@ssw0rd"
   },
-  "PmClientAddress": "https://pm-service-develop.masastack.com/"
+  "PmClientAddress": "https://pm-service-develop.masastack.com/",
+  "IdentityServerUrl": "https://sso-develop.masastack.com"
 }
