--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Masa.Dcc.Web.Admin.Rcl.csproj
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Masa.Dcc.Web.Admin.Rcl.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Humanizer.Core.zh-CN" Version="2.14.1" />
     <PackageReference Include="Mapster" Version="7.3.0" />
     <PackageReference Include="Masa.Blazor" Version="0.6.0-preview.3" />
     <PackageReference Include="Masa.Contrib.BasicAbility.Tsc" Version="0.6.0-preview.1" />
