--- a/src/ApiGateways/Masa.Dcc.ApiGateways.Caller/Masa.Dcc.ApiGateways.Caller.csproj
+++ b/src/ApiGateways/Masa.Dcc.ApiGateways.Caller/Masa.Dcc.ApiGateways.Caller.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Masa.Contrib.BasicAbility.Pm" Version="0.6.0-preview.1" />
+    <PackageReference Include="Masa.Contrib.StackSdks.Pm" Version="0.6.0-preview.6" />
     <PackageReference Include="Masa.Utils.Caller.HttpClient" Version="0.6.0-preview.2" />
-    <PackageReference Include="Masa.Utils.Configuration.Json" Version="0.6.0-preview.3" />
+    <PackageReference Include="Masa.Utils.Configuration.Json" Version="0.6.0-preview.6" />
   </ItemGroup>
 
   <ItemGroup>
