doc: update appsettings

--- a/src/Services/Masa.Dcc.Service/appsettings.Develop.json
+++ b/src/Services/Masa.Dcc.Service/appsettings.Develop.json
@@ -7,13 +7,13 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=10.10.90.37,30100;Database=masa-dcc-v2;User Id=sa;Password=p@ssw0rd;"
+    "DefaultConnection": "Server=sqlserver-dev-svc.stack,1433;Database=masa-dcc-v2;User Id=sa;Password=p@ssw0rd;"
   },
   "Redis": {
     "Servers": [
       {
-        "Host": "10.10.90.37",
-        "Port": 30120
+        "Host": "redis-dev-svc.stack",
+        "Port": 6379
       }
     ],
     "DefaultDatabase": 0,
