--- a/src/Services/Masa.Dcc.Service/appsettings.Staging.json
+++ b/src/Services/Masa.Dcc.Service/appsettings.Staging.json
@@ -7,13 +7,13 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=10.10.90.37,30110;Database=masa-dcc-v2;User Id=sa;Password=p@ssw0rd;"
+    "DefaultConnection": "Server=sqlserver-test-svc.stack,1433;Database=masa-dcc-v2;User Id=sa;Password=p@ssw0rd;"
   },
   "Redis": {
     "Servers": [
       {
-        "Host": "10.10.90.37",
-        "Port": 30130
+        "Host": "redis-test-svc.stack",
+        "Port": 6379
       }
     ],
     "DefaultDatabase": 0,
