--- a/src/Services/Masa.Dcc.Service/Masa.Dcc.Service.Admin.csproj
+++ b/src/Services/Masa.Dcc.Service/Masa.Dcc.Service.Admin.csproj
@@ -36,7 +36,9 @@
 		<PackageReference Include="Masa.Utils.Caching.DistributedMemory" Version="0.6.0-preview.6" />
 		<PackageReference Include="Masa.Utils.Caching.Redis" Version="0.6.0-preview.6" />
 		<PackageReference Include="Masa.Utils.Caller.HttpClient" Version="0.6.0-preview.2" />
+		<PackageReference Include="Masa.Utils.Development.Dapr.AspNetCore" Version="0.6.0-preview.9" />
 		<PackageReference Include="Masa.Utils.Extensions.Expressions" Version="0.6.0-preview.6" />
+		<PackageReference Include="Masa.Utils.Security.Cryptography" Version="0.6.0-preview.9" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.1" />
 		<PackageReference Include="Masa.Contrib.Data.UoW.EFCore" Version="0.6.0-preview.6" />
 		<PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.Dapr" Version="0.6.0-preview.6" />
