--- a/dapr/components/masa-framework-secretstore.yaml
+++ b/dapr/components/masa-framework-secretstore.yaml
@@ -1,7 +1,7 @@
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: local-secret-store
+  name: localsecretstore
   namespace: default
 spec:
   type: secretstores.local.file
