feat: add team change

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.Staging.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.Staging.json
@@ -14,5 +14,19 @@
     "Authority": "https://sso-staging.masastack.com",
     "ClientId": "masa.stack.web-staging",
     "ClientSecret": ""
+  },
+  "DccOptions": {
+    "ManageServiceAddress": "https://dcc-service-staging.masastack.com/",
+    "RedisOptions": {
+      "Servers": [
+        {
+          "Host": "10.10.90.37",
+          "Port": 30130
+        }
+      ],
+      "DefaultDatabase": 0,
+      "Password": "p@ssw0rd"
+    },
+    "Secret": ""
   }
 }
