--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.Development.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.Development.json
@@ -14,5 +14,19 @@
     "Authority": "https://sso-develop.masastack.com",
     "ClientId": "masa.stack.web-development",
     "ClientSecret": ""
+  },
+  "DccOptions": {
+    "ManageServiceAddress": "https://dcc-service-develop.masastack.com/",
+    "RedisOptions": {
+      "Servers": [
+        {
+          "Host": "10.10.90.37",
+          "Port": 30120
+        }
+      ],
+      "DefaultDatabase": 0,
+      "Password": "p@ssw0rd"
+    },
+    "Secret": ""
   }
 }
