--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.Development.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.Development.json
@@ -10,10 +10,12 @@
   "PmClientAddress": "https://pm-service-develop.masastack.com/",
   "AuthServiceBaseAddress": "https://auth-service-develop.masastack.com/",
   "McServiceBaseAddress": "https://mc-service-develop.masastack.com",
-  "OIDC": {
-    "Authority": "https://sso-develop.masastack.com",
-    "ClientId": "masa.stack.web-development",
-    "ClientSecret": ""
+  "$public.OIDC": {
+    "AuthClient": {
+      "Authority": "https://sso-develop.masastack.com",
+      "ClientId": "masa.stack.web-development",
+      "ClientSecret": ""
+    }
   },
   "DccOptions": {
     "ManageServiceAddress": "https://dcc-service-develop.masastack.com/",
