--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.Staging.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.Staging.json
@@ -20,8 +20,8 @@
     "RedisOptions": {
       "Servers": [
         {
-          "Host": "10.10.90.37",
-          "Port": 30130
+          "Host": "redis-test-svc.stack",
+          "Port": 6379
         }
       ],
       "DefaultDatabase": 0,
