--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.Staging.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.Staging.json
@@ -10,10 +10,12 @@
   "PmClientAddress": "https://pm-service-staging.masastack.com/",
   "AuthServiceBaseAddress": "https://auth-service-staging.masastack.com/",
   "McServiceBaseAddress": "https://mc-service-staging.masastack.com",
-  "OIDC": {
-    "Authority": "https://sso-staging.masastack.com",
-    "ClientId": "masa.stack.web-staging",
-    "ClientSecret": ""
+  "$public.OIDC": {
+    "AuthClient": {
+      "Authority": "https://sso-staging.masastack.com",
+      "ClientId": "masa.stack.web-staging",
+      "ClientSecret": ""
+    }
   },
   "DccOptions": {
     "ManageServiceAddress": "https://dcc-service-staging.masastack.com/",
