--- a/src/Contracts/Masa.Dcc.Contracts.Admin/Masa.Dcc.Contracts.Admin.csproj
+++ b/src/Contracts/Masa.Dcc.Contracts.Admin/Masa.Dcc.Contracts.Admin.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Masa.Utils.Data.DataAnnotations" Version="0.6.0-preview.12" />
+    <PackageReference Include="Masa.Utils.Data.DataAnnotations" Version="0.6.0-rc.3" />
   </ItemGroup>
 
 </Project>
