chore: update redis and fix team bug

--- a/src/Services/Masa.Dcc.Service/appsettings.Develop.json
+++ b/src/Services/Masa.Dcc.Service/appsettings.Develop.json
@@ -9,7 +9,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=sqlserver-dev-svc.stack,1433;Database=masa-dcc-v2;User Id=sa;Password=p@ssw0rd;"
   },
-  "Redis": {
+  "RedisConfig": {
     "Servers": [
       {
         "Host": "redis-dev-svc.stack",
