--- a/src/Services/Masa.Dcc.Service/appsettings.Development.json
+++ b/src/Services/Masa.Dcc.Service/appsettings.Development.json
@@ -9,7 +9,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=10.10.90.37,30100;Database=masa-dcc-v2;User Id=sa;Password=p@ssw0rd;"
   },
-  "Redis": {
+  "RedisConfig": {
     "Servers": [
       {
         "Host": "10.10.90.37",
