--- a/src/Services/Masa.Dcc.Service/appsettings.Staging.json
+++ b/src/Services/Masa.Dcc.Service/appsettings.Staging.json
@@ -9,7 +9,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=sqlserver-test-svc.stack,1433;Database=masa-dcc-v2;User Id=sa;Password=p@ssw0rd;"
   },
-  "Redis": {
+  "RedisConfig": {
     "Servers": [
       {
         "Host": "redis-test-svc.stack",
