--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Masa.Dcc.Web.Admin.Rcl.csproj
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Masa.Dcc.Web.Admin.Rcl.csproj
@@ -15,10 +15,10 @@
     <PackageReference Include="Humanizer.Core.zh-CN" Version="2.14.1" />
     <PackageReference Include="Mapster" Version="7.3.0" />
     <PackageReference Include="Masa.Contrib.BasicAbility.Tsc" Version="0.6.0-preview.1" />
-    <PackageReference Include="Masa.Stack.Components" Version="0.0.146" />
-    <PackageReference Include="Masa.Utils.Development.Dapr.AspNetCore" Version="0.6.0-rc.6" />
-    <PackageReference Include="Masa.Utils.Security.Authentication.OpenIdConnect" Version="0.6.0-rc.6" />
-    <PackageReference Include="Masa.Utils.Security.Cryptography" Version="0.6.0-rc.6" />
+    <PackageReference Include="Masa.Stack.Components" Version="0.0.150" />
+    <PackageReference Include="Masa.Utils.Development.Dapr.AspNetCore" Version="0.6.0" />
+    <PackageReference Include="Masa.Utils.Security.Authentication.OpenIdConnect" Version="0.6.0" />
+    <PackageReference Include="Masa.Utils.Security.Cryptography" Version="0.6.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.3" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
