--- a/src/ApiGateways/Masa.Dcc.ApiGateways.Caller/Masa.Dcc.ApiGateways.Caller.csproj
+++ b/src/ApiGateways/Masa.Dcc.ApiGateways.Caller/Masa.Dcc.ApiGateways.Caller.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Masa.Contrib.Service.Caller.HttpClient" Version="0.6.0" />
     <PackageReference Include="Masa.Contrib.StackSdks.Pm" Version="0.6.0" />
-    <PackageReference Include="Masa.Utils.Caller.HttpClient" Version="0.6.0-preview.2" />
     <PackageReference Include="Masa.Utils.Configuration.Json" Version="0.6.0" />
   </ItemGroup>
 
