feat: add refresh api

--- a/src/Contracts/Masa.Dcc.Contracts.Admin/Masa.Dcc.Contracts.Admin.csproj
+++ b/src/Contracts/Masa.Dcc.Contracts.Admin/Masa.Dcc.Contracts.Admin.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Masa.Utils.Data.DataAnnotations" Version="0.6.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="App\Model\" />
+  </ItemGroup>
+
 </Project>
