--- a/src/Services/Masa.Dcc.Service/Setup/$public.RedisConfig.Develop.json
+++ b/src/Services/Masa.Dcc.Service/Setup/$public.RedisConfig.Develop.json
@@ -1,11 +1,11 @@
 {
   "Servers": [
     {
-      "Host": "redis-dev-svc.stack",
-      "Port": "6379"
+      "Host": "10.175.207.202",
+      "Port": "30260"
     }
   ],
   "DefaultDatabase": 0,
-  "Password": "p@ssw0rd",
-  "SyncTimeout": 60000
+  "Password": "Hzss@123redis",
+  "SyncTimeout": 6000
 }
