--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.Develop.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.Develop.json
@@ -6,6 +6,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Masa:Observable": {
+    "OtlpUrl": "http://otel-dev-opentelemetry-collector-agent.opentelemetry:4317",
+    "ServiceName": "masa.dcc.web",
+    "ServiceVersion": "1.0.0",
+    "ServiceNameSpace": "Develop"
+  },
   "ServiceBaseUrl": "https://dcc-service-develop.masastack.com",
   "PmClientAddress": "https://pm-service-develop.masastack.com/",
   "AuthServiceBaseAddress": "https://auth-service-develop.masastack.com/",
