--- a/src/Services/Masa.Dcc.Service/appsettings.Develop.json
+++ b/src/Services/Masa.Dcc.Service/appsettings.Develop.json
@@ -9,6 +9,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=10.175.171.201,32679;Database=dcc_dev;User Id=ss;Password=Hzss@123;"
   },
+  "Masa:Observable": {
+    "OtlpUrl": "http://otel-dev-opentelemetry-collector-agent.opentelemetry:4317",
+    "ServiceName": "masa.dcc.service",
+    "ServiceVersion": "1.0.0",
+    "ServiceNameSpace": "Develop"
+  },
   "RedisConfig": {
     "Servers": [
       {
