--- a/src/Services/Masa.Dcc.Service/appsettings.Staging.json
+++ b/src/Services/Masa.Dcc.Service/appsettings.Staging.json
@@ -9,6 +9,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=10.175.171.201,32679;Database=dcc_staging;User Id=ss;Password=Hzss@123;"
   },
+  "Masa:Observable": {
+    "OtlpUrl": "http://10.10.90.114:32147",
+    "ServiceName": "masa.dcc.service",
+    "ServiceVersion": "1.0.0",
+    "ServiceNameSpace": "Staging"
+  },
   "RedisConfig": {
     "Servers": [
       {
