--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Masa.Dcc.Web.Admin.Rcl.csproj
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Masa.Dcc.Web.Admin.Rcl.csproj
@@ -14,10 +14,11 @@
     <PackageReference Include="Dapr.AspNetCore" Version="1.8.0" />
     <PackageReference Include="Humanizer.Core.zh-CN" Version="2.14.1" />
     <PackageReference Include="Mapster" Version="7.3.0" />
-    <PackageReference Include="Masa.Contrib.Development.DaprStarter.AspNetCore" Version="0.7.0-preview.8" />
-    <PackageReference Include="Masa.Stack.Components" Version="0.0.161" />
-    <PackageReference Include="Masa.Utils.Security.Authentication.OpenIdConnect" Version="0.7.0-preview.8" />
-    <PackageReference Include="Masa.Utils.Security.Cryptography" Version="0.7.0-preview.8" />
+    <PackageReference Include="Masa.Contrib.Development.DaprStarter.AspNetCore" Version="0.7.0-preview.11" />
+    <PackageReference Include="Masa.Contrib.StackSdks.Tsc" Version="0.7.0-preview.12" />
+    <PackageReference Include="Masa.Stack.Components" Version="0.0.170" />
+    <PackageReference Include="Masa.Utils.Security.Authentication.OpenIdConnect" Version="0.7.0-preview.11" />
+    <PackageReference Include="Masa.Utils.Security.Cryptography" Version="0.7.0-preview.11" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.3" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
