--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.Staging.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.Staging.json
@@ -6,6 +6,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Masa:Observable": {
+    "OtlpUrl": "http://10.10.90.114:32147",
+    "ServiceName": "masa.dcc.web",
+    "ServiceVersion": "1.0.0",
+    "ServiceNameSpace": "Staging"
+  },
   "ServiceBaseUrl": "https://dcc-service-staging.masastack.com",
   "PmClientAddress": "https://pm-service-staging.masastack.com/",
   "AuthServiceBaseAddress": "https://auth-service-staging.masastack.com/",
