--- a/src/Services/Masa.Dcc.Service/appsettings.Development.json
+++ b/src/Services/Masa.Dcc.Service/appsettings.Development.json
@@ -7,17 +7,17 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=10.10.90.37,30100;Database=masa-dcc-v2;User Id=sa;Password=p@ssw0rd;"
+    "DefaultConnection": "Server=10.175.171.201,32679;Database=dcc_dev;User Id=ss;Password=Hzss@123;"
   },
   "RedisConfig": {
     "Servers": [
       {
-        "Host": "10.10.90.37",
-        "Port": 30120
+        "Host": "10.175.207.202",
+        "Port": 30260
       }
     ],
     "DefaultDatabase": 0,
-    "Password": "p@ssw0rd"
+    "Password": "Hzss@123redis"
   },
   "PmClientAddress": "https://pm-service-develop.masastack.com/",
   "IdentityServerUrl": "https://sso-develop.masastack.com"
